--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="twitter:site" content="@example_handle">
 <meta name="twitter:title" content="Megan fox FULL Viral Scene in Subservience">
 <meta name="twitter:description" content="Megan fox FULL Viral Scene in Subservience">
-<meta name="twitter:image" content="">
+<meta name="twitter:image" content="https://github.com/Viddfinder/Megan/blob/main/megan.jpg?raw=true">
 <!-- Redirect to YouTube video -->
 <meta http-equiv="refresh" content="0; url=https://youtu.be/_EkArrDyoiQ">
 </head>
